...
        
    }
    
    internal func setTheme(_ theme: CourierInboxTheme) {
        loadingIndicator.color = theme.loadingColor
        loadingIndicator.startAnimating()
        loadingIndicator.appendAccessibilityIdentifier("Inbox")
    }
    
}

